many bugs squashed

--- a/PROJECT_DIR/django_project/dublin_bus/static/css/project/Components/_action-button.scss
+++ b/PROJECT_DIR/django_project/dublin_bus/static/css/project/Components/_action-button.scss
@@ -137,3 +137,10 @@
         }
     }
 }
+
+
+.desktop {
+    & .search-out {
+        width: 68% !important;
+    }
+}
